--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -187,7 +187,8 @@
     "invalidSceneUrl": "Couldn't import scene from the supplied URL. It's either malformed, or doesn't contain valid Excalidraw JSON data.",
     "resetLibrary": "This will clear your library. Are you sure?",
     "removeItemsFromsLibrary": "Delete {{count}} item(s) from library?",
-    "invalidEncryptionKey": "Encryption key must be of 22 characters. Live collaboration is disabled."
+    "invalidEncryptionKey": "Encryption key must be of 22 characters. Live collaboration is disabled.",
+    "submitAssignment": "Bạn có chắc muốn Nộp bài tập không?"
   },
   "errors": {
     "unsupportedFileType": "Unsupported file type.",
